--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div>
     </div>
     <div id="container">
-        <h1>Increment/Decrement Counter!</h1>
+        <h1 id="header">Increment/Decrement Counter!</h1>
         <div id="counterContainer">
             <button onclick="incrementFunction()" id="increment">+</button>
-            <h3 id="counter"></h3>
+            <p id="counter"></p>
             <button onclick="decrementFunction()" id="decrement">-</button>
         </div>
     </div>
